--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
-
+body{
+	background-color: #f8fffe;
+}
+.questions{
+	height:50px;
+	margin-top:20px;
+	padding:15px;
+	max-width:600px;
+	border-left:8px solid green;
+}
 /* Your CSS Code here. */
